fix: Resolve issue with preloader stuck loading
- Implemented lazy loading for images in the HTML to improve load times
  and performance.
  - Added logic to cache the preloader state using session storage,
    preventing the preloader from reappearing unnecessarily on
    subsequent visits during the same session.
    - Integrated the Page Visibility API to check the preloader state
      when the page becomes visible, ensuring the preloader hides
      promptly upolude PerformanceObserver for observing the Largestn
      revisiting the page.
      - Enhanced script.js to inc Contentful Paint (LCP) element (hero
	section) and hiding the preloader accordingly.
	- Included fallback mechanisms to ensure the preloader hides
	  even if PerformanceObserver is not supported.

	  Changes:
	  - Updated HTML to include loading="lazy" for image elements.
	  - Enhanced script.js to observe LCP and manage preloader state
	    using session storage ants to ensure proper preloader
	    display and hiding.
	    d the Page Visibility API.
	    - Applied CSS adjustmen
	    Performance improvements:
	    - Reduced initial page load time.
	    - Improved user experience by minimizing perceived load
	      time.
	      - Ensured preloader hides promptly after critical content
		is loaded or when the page is revisited.

		Other:
		- Added debugging logs to trace preloader and LCP
		  observation functionality.

--- a/maktaba/style.css
+++ b/maktaba/style.css
@@ -60,7 +60,7 @@ CSS STRUCTURE:
   --gray-color-500:           #D0D0D0;
   --gray-color-800:           #3A3A3A;
   --light-gray-color:         #D2D2D2;
-  --primary-color:            #F86D72;
+  --primary-color:            #007bff;
   --bs-body-color:            #272727;
   --bs-secondary-color:       #FFE8F0;
   --bs-secondary-rgb:         255, 232, 240;
@@ -69,7 +69,7 @@ CSS STRUCTURE:
   --bs-dropdown-link-active-bg: #F5F5F5;
   --light-color:              #F8F8F8;
   --light-blue-color:         #EDF1F3;
-  --navbar-color-color:       #131814;
+  --navbar-color-color:       #F5F5F5;
   --swiper-theme-color:       #4A4A4A;
   --swiper-pagination-color:  #4A4A4A;
   --bs-box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.08);
@@ -1089,7 +1089,7 @@ th{
 
 /* nav tabs */
 .nav-tabs .nav-link{
-  color: var(--black-color);
+  color: var(--navbar-color-color);
 }
 :focus-visible {
   outline: none;
@@ -1099,7 +1099,9 @@ th{
 /*----------------------------------------------*/
 .site-header {
   width: 100%;
-  z-index: 10;
+    height: 5rem;
+    z-index: 10;
+    background: #8e673e url(../images/k-opacity-70.png);
   transition: background 0.3s ease-out;
 }
 .navbar-toggler svg.navbar-icon {
@@ -1110,7 +1112,7 @@ th{
   font-size: 0.7619em;
   font-weight: 600;
   letter-spacing: 0.09em;
-  color: var(--black-color);
+  color: var(--navbar-color-color);
 }
 .navbar-nav .nav-item a.nav-link.active, 
 .navbar-nav .nav-item a.nav-link:focus, 
@@ -1132,10 +1134,23 @@ th{
   --bs-dropdown-link-active-bg: #F5F5F5;
   --bs-dropdown-zindex: 99999;
 }
+.dropdown-item {
+  color: #11ABB0;
+}
 .dropdown-item.active, .dropdown-item:active {
   color: var(--bs-dropdown-link-active-color);
   text-decoration: none;
 }
+.dropdown-menu[data-bs-popper] {
+  right: 0 !important;
+  left: auto;
+}
+.chevron-forward-circle{
+  color:var(--primary-color);
+}
+/* .chevron-back-circle{
+  color:var(--primary-color);
+} */
 .cart-dropdown .dropdown-menu,
 .wishlist-dropdown .dropdown-menu{
   min-width: 21rem;
@@ -1164,6 +1179,12 @@ th{
 }
 #header-nav .offcanvas-end {
   width: 500px;
+}
+#header-nav .navbar-brand .header-nav-logo {
+  height: 3rem;
+}
+.navbar-toggler {
+  background-color: #8E673E;
 }
 
 /*------------ Top User Icons -----------*/
